# sudoku-program-solving-I

./: .gitignore  CMakeLists.txt  README.MD  main.cpp  start.cpp  sudoku.h
aid/: copypaste.cpp  draw.cpp  get_key.cpp  stringboard.cpp
doc/: doc.tex
generate/: generate_cp.cpp  generate_lib.cpp  generate_menu.cpp  generate_saves.cpp
play/: game_aid.cpp  game_board.cpp  run_game.cpp
play/operation/: complete_game.cpp  copy_to_paste.cpp  move.cpp  regame.cpp  save_game.cpp  solve.cpp  undo_redo.cpp  write_number.cpp
play/print/: print_board.cpp  print_hint.cpp  print_message.cpp
setting/: difficulty.cpp  key_board.cpp  key_board_menu.cpp  open_hint.cpp  setting_file.cpp  setting_menu.cpp
